# netage

./: CLAUDE.md  LOCAL_vs_HPC.md  PRE_UPLOAD_VALIDATION.md  PROJECT_DESCRIPTION.md  README.md  Snakefile  environment.yml  pyproject.toml
configs/: default.yaml  hpc.yaml  variable_groups.yaml
scripts/: attribute.py  compute_bioage.py  evaluate.py  evaluate_dementia_survival.py  preprocess.py  setup_env.sh  submit_hpc.sh  train.py  train_phenoage.py
scripts/reporting/: plot_age_stratified_importance.py  plot_comparator_benchmark.py  plot_delta_distribution.py  plot_group_importance.py  plot_importance_contrast.py  plot_km_by_delta.py  plot_shap_interactions.py
src/amoris_bioage/: __init__.py  config.py
src/amoris_bioage/attribution/: __init__.py  background.py  ig_explainer.py  shap_explainer.py
src/amoris_bioage/bioage/: __init__.py  breslow.py  inversion.py
src/amoris_bioage/data/: __init__.py  loader.py  preprocessing.py  schema.py  splits.py
src/amoris_bioage/models/: __init__.py  cox_loss.py  network.py
src/amoris_bioage/training/: __init__.py  dataset.py  trainer.py
src/amoris_bioage/validation/: __init__.py  calibration.py  concordance.py  incremental.py
tests/: conftest.py  test_attribution.py  test_bioage_inversion.py  test_breslow.py  test_config.py  test_cox_loss.py  test_data_loader.py  test_preprocessing.py  test_splits.py  test_training.py  test_validation.py
tests/fixtures/: generate_synthetic.py  synthetic_medium.csv  synthetic_small.csv
