[project]
name = "amoris-bioage"
version = "0.1.0"
description = "Neural Cox biological age estimation in the AMORIS cohort"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "lifelines>=0.29",
    "scikit-survival>=0.22",
    "shap>=0.45",
    "captum>=0.7",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amoris_bioage"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/amoris_bioage"]
